Mon Sep 18 14:03:58 BST 2000 Olly Betts

	* Sorted out wrinkles with geacinclude.sh.

Mon Sep 18 13:02:36 BST 2000 Olly Betts

	* Added tests for skip_to on {Post,Term}ListIterator.

Mon Sep 18 12:59:39 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Keep a count of the skipped tests.

Mon Sep 18 12:31:05 BST 2000 Olly Betts

	* acinclude.m4 generation moved from buildall to a separate script
	  so that the Makefile can regenerate acinclude.m4 if necessary.

	* Use AC_CONFIG_AUX_DIR to reduce the clutter in the top level
	  directory.

Mon Sep 18 12:26:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Tests in the testsuite can now be skipped, and avoid being
	  counted as either a pass or a fail.
	
	* Leak detection code partly separated out.

Mon Sep 18 11:55:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* malloccheck now includes a naive memory allocation function to
	  use before malloc() and friends are found.  This removes the
	  gross dependency on glibc2 internals.

Mon Sep 18 10:57:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added malloccheck.c to the distribution.

Fri Sep 15 19:02:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an LD_PRELOADable library to do some malloc() etc checking.
	  (Currently doesn't yet do leak checking, but does the accounting.)
	  May not work on non-glibc2 systems.

	* Simplified omerr_tostring so that it uses OmError::get_type().

Fri Sep 15 18:53:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix minor bug in newly altered weighting formula, and update tests
	  to expect new values.

Fri Sep 15 18:14:37 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Allow users to set the parameters used in the BM25 and traditional
	  weighting schemes.  Documented, but not tested.

Fri Sep 15 15:02:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved todo.xml to docs/
