@@ -1,3 +1,8 @@
+Mon Sep 18 14:36:13 BST 2000 Olly Betts
+
+	* Implemented API side of OmDatabase::positionlist_{begin,end} -
+	  still needs support in backends.
+ 
 Mon Sep 18 14:03:58 BST 2000 Olly Betts
 
 	* Sorted out wrinkles with geacinclude.sh.
